tests/ui/contravariant.stderr
error: lifetime may not live long enough
  --> tests/ui/contravariant.rs:10:5
   |
 9 | fn require_covariant<'a>(phantom: ContravariantPhantom<&'static str>) -> ContravariantPhantom<&'a str> {
   |                      -- lifetime `'a` defined here
10 |     phantom
   |     ^^^^^^^ returning this value requires that `'a` must outlive `'static`
